--- a/html/themes/custom/dc_theme/scss/_layout.scss
+++ b/html/themes/custom/dc_theme/scss/_layout.scss
@@ -37,3 +37,12 @@
     }
   }
 }
+
+.path-taxonomy {
+  .content {
+    margin-bottom: 1.37em;
+    .field--name-field-schedule-code {
+      margin-top: 1.25em;
+    }
+  }
+}
